improved Web Access / OnionShare and DropBox sync support in UI

--- a/app/res/layout/activity_remote_share.xml
+++ b/app/res/layout/activity_remote_share.xml
@@ -9,18 +9,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_margin="30dp"
+        android:layout_weight="1.5"
+        android:autoLink="web"
         android:gravity="center"
-        android:layout_weight=".6"
-        android:text="Remote Share"
-         android:layout_margin="40dp"
+        android:text="This service enables access to your secure CameraV gallery through a web browser on another computer or mobile device on the same local network or through the Tor network."
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
+    <CheckBox
+        android:id="@+id/cbOnionShare"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+                android:gravity="center"
+    	android:layout_marginLeft="30dp"
+    	android:layout_marginRight="30dp"    	            
+        android:text="Enable Access via Tor (OnionShare)" />  
     <Button
         android:id="@+id/buttonService"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Toggle Sharing"
-        android:layout_margin="60dp"
+        android:text="Activate Server"
+        android:layout_margin="30dp"
          />
 
 </LinearLayout>
