improve share menu functions for dropbox sync

--- a/app/res/menu/activity_home_gallery.xml
+++ b/app/res/menu/activity_home_gallery.xml
@@ -9,7 +9,7 @@
         android:showAsAction="always" android:enabled="true"/>
             <item android:id="@+id/menu_remote_access_dropbox" android:title="@string/menu_remote_access_dropbox" 
         android:icon="@drawable/ic_action_backup" android:orderInCategory="98" 
-        android:showAsAction="always" android:enabled="true"/>
+        android:showAsAction="always" android:enabled="true" android:checkable="true"/>
         </menu>
         </item>
     <item android:id="@+id/menu_filter" android:title="@string/menu_select" android:icon="@drawable/ic_gallery_select" android:orderInCategory="99" android:showAsAction="always" android:enabled="true" android:actionLayout="@layout/action_gallery_filter"/>
