fixes/exception catches for most common camera crashes and UI weirdness

--- a/cameraVApp/src/main/res/layout/fragment_gallery.xml
+++ b/cameraVApp/src/main/res/layout/fragment_gallery.xml
@@ -73,6 +73,8 @@
         android:id="@+id/progressWait"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        />
 
 </RelativeLayout>
